# GTK4-Codigo-Basico-Definitivo

./: CMakeLists.txt  README.md  gtk_application_window.c  style.css  window.blp  window.ui
.cache/clangd/index/: gtk_application_window.c.7AEF78D25EE9F46B.idx  window.c.4D81EB9F0415910C.idx
